--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/TopDown/Blueprints/GI_GlobalStore.GI_GlobalStore_C
 
 [/Script/NavigationSystem.RecastNavMesh]
 bDrawPolyEdges=False
