--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=DevKit
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDown/Maps/Sanctuary.Sanctuary
-GameDefaultMap=/Game/TopDown/Maps/Sanctuary.Sanctuary
+EditorStartupMap=/Game/TopDown/Maps/MainLevel.MainLevel
+GameDefaultMap=/Game/TopDown/Maps/MainLevel.MainLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
