--- a/DevKit.uproject
+++ b/DevKit.uproject
@@ -28,6 +28,10 @@
 		{
 			"Name": "GameplayStateTree",
 			"Enabled": true
+		},
+		{
+			"Name": "GameplayAbilities",
+			"Enabled": true
 		}
 	]
 }
