--- a/Config/DefaultEditorPerProjectUserSettings.ini
+++ b/Config/DefaultEditorPerProjectUserSettings.ini
@@ -1,2 +1,6 @@
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/TopDownBP
+
+[/Script/LiveCoding.LiveCodingSettings]
+bEnabled=False
+Startup=Manual
