--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=DevKit
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDown/Maps/MainLevel.MainLevel
-GameDefaultMap=/Game/TopDown/Maps/MainLevel.MainLevel
+EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -49,6 +49,7 @@ TileSetUpdateInterval=1.000000
 HeuristicScale=0.999000
 VerticalDeviationFromGroundCompensation=0.000000
 bForceRebuildOnLoad=True
+RuntimeGeneration=Dynamic
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
@@ -106,7 +107,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_TopDownBP",NewGameName="/Script/DevKit")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_TopDownBP",NewGameName="/Script/DevKit")
-AssetManagerClassName=/Script/DevKit.DevAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
