delete thirdperson folder

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -18,3 +18,6 @@ MetaDataTagsForAssetRegistry=()
 [/Script/GameplayAbilities.AbilitySystemGlobals]
 AbilitySystemGlobalsClassName=/Script/ComboGraph.ComboGraphAbilitySystemGlobals
 
+[/Script/ComboGraph.ComboGraphProjectSettings]
+ContextMapping=/Game/TopDown/Input/IMC_TopDown.IMC_TopDown
+
