--- a/DevKit.uproject
+++ b/DevKit.uproject
@@ -46,7 +46,7 @@
 		},
 		{
 			"Name": "GASCompanion",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/d83c6f34c3fb4b7092dde195c37c7413"
 		}
 	]
