--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,5 +8,9 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Attack",DevComment="")
++GameplayTagList=(Tag="Attack.Melee",DevComment="")
++GameplayTagList=(Tag="Attack.Range",DevComment="")
++GameplayTagList=(Tag="Attack.Trap",DevComment="")
 +GameplayTagList=(Tag="Weapon.Primary",DevComment="")
 
