--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -20,4 +20,5 @@ AbilitySystemGlobalsClassName=/Script/ComboGraph.ComboGraphAbilitySystemGlobals
 
 [/Script/ComboGraph.ComboGraphProjectSettings]
 ContextMapping=/Game/TopDown/Input/IMC_TopDown.IMC_TopDown
+IconSize=48.000000
 
