--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,5 +12,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attack.Melee",DevComment="")
 +GameplayTagList=(Tag="Attack.Range",DevComment="")
 +GameplayTagList=(Tag="Attack.Trap",DevComment="")
++GameplayTagList=(Tag="Damage",DevComment="")
++GameplayTagList=(Tag="Damage.Physics",DevComment="")
 +GameplayTagList=(Tag="Weapon.Primary",DevComment="")
 
