--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,5 +14,11 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attack.Trap",DevComment="")
 +GameplayTagList=(Tag="Damage",DevComment="")
 +GameplayTagList=(Tag="Damage.Physics",DevComment="")
++GameplayTagList=(Tag="Status",DevComment="")
++GameplayTagList=(Tag="Status.Immune",DevComment="")
++GameplayTagList=(Tag="Status.Immune.OnConversation",DevComment="")
++GameplayTagList=(Tag="Status.Vulnerable",DevComment="")
++GameplayTagList=(Tag="Status.Vulnerable.TakenDamage",DevComment="")
++GameplayTagList=(Tag="Weapon.GreateSword",DevComment="")
 +GameplayTagList=(Tag="Weapon.Primary",DevComment="")
 
