--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,12 +6,14 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagRedirects=(OldTagName="AnimNotify.ComboWindow",NewTagName="AnimNotify.Combo_1_Window")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="AnimNotify",DevComment="")
++GameplayTagList=(Tag="AnimNotify.Combo_1_Window",DevComment="")
++GameplayTagList=(Tag="AnimNotify.Combo_2_Window",DevComment="")
 +GameplayTagList=(Tag="AnimNotify.ComboEnd",DevComment="")
 +GameplayTagList=(Tag="AnimNotify.ComboStart",DevComment="")
-+GameplayTagList=(Tag="AnimNotify.ComboWindow",DevComment="")
 +GameplayTagList=(Tag="Attack",DevComment="")
 +GameplayTagList=(Tag="Attack.Melee",DevComment="")
 +GameplayTagList=(Tag="Attack.Range",DevComment="")
@@ -29,6 +31,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="ComboType.LightAtk.LAtk4",DevComment="")
 +GameplayTagList=(Tag="Damage",DevComment="")
 +GameplayTagList=(Tag="Damage.Physics",DevComment="")
++GameplayTagList=(Tag="Hit",DevComment="")
++GameplayTagList=(Tag="Hit.Slash",DevComment="")
 +GameplayTagList=(Tag="Status",DevComment="")
 +GameplayTagList=(Tag="Status.Immune",DevComment="")
 +GameplayTagList=(Tag="Status.Immune.OnConversation",DevComment="")
