--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -18,6 +18,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attack.Melee",DevComment="")
 +GameplayTagList=(Tag="Attack.Range",DevComment="")
 +GameplayTagList=(Tag="Attack.Trap",DevComment="")
++GameplayTagList=(Tag="Buffer",DevComment="")
++GameplayTagList=(Tag="Buffer.DurationBuffTest",DevComment="")
++GameplayTagList=(Tag="Buffer.InstBuffTest",DevComment="")
 +GameplayTagList=(Tag="ComboType",DevComment="")
 +GameplayTagList=(Tag="ComboType.HeavyAtk",DevComment="")
 +GameplayTagList=(Tag="ComboType.HeavyAtk.HAtk1",DevComment="")
