--- a/DevKit.uproject
+++ b/DevKit.uproject
@@ -62,6 +62,10 @@
 			"Name": "GASCompanion",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/d83c6f34c3fb4b7092dde195c37c7413"
+		},
+		{
+			"Name": "Empty",
+			"Enabled": false
 		}
 	]
 }
