add test character

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -41,6 +41,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Status.Immune.OnConversation",DevComment="")
 +GameplayTagList=(Tag="Status.Vulnerable",DevComment="")
 +GameplayTagList=(Tag="Status.Vulnerable.TakenDamage",DevComment="")
++GameplayTagList=(Tag="Status.WeaponHold",DevComment="")
++GameplayTagList=(Tag="Status.WeaponHold.GreatSword",DevComment="")
++GameplayTagList=(Tag="Status.WeaponHold.Katana",DevComment="")
 +GameplayTagList=(Tag="Weapon.GreateSword",DevComment="")
 +GameplayTagList=(Tag="Weapon.Primary",DevComment="")
 
