--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,6 +11,8 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="AnimNotify",DevComment="")
 +GameplayTagList=(Tag="AnimNotify.Combo_1_Window",DevComment="")
++GameplayTagList=(Tag="AnimNotify.Combo_1_Window.ComboEnd",DevComment="")
++GameplayTagList=(Tag="AnimNotify.Combo_1_Window.ComboStart",DevComment="")
 +GameplayTagList=(Tag="AnimNotify.Combo_2_Window",DevComment="")
 +GameplayTagList=(Tag="AnimNotify.ComboEnd",DevComment="")
 +GameplayTagList=(Tag="AnimNotify.ComboStart",DevComment="")
