--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -107,6 +107,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_TopDownBP",NewGameName="/Script/DevKit")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_TopDownBP",NewGameName="/Script/DevKit")
+AssetManagerClassName=/Script/DevKit.DevAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
