--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -38,6 +38,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Damage.Physics",DevComment="")
 +GameplayTagList=(Tag="Hit",DevComment="")
 +GameplayTagList=(Tag="Hit.Slash",DevComment="")
++GameplayTagList=(Tag="Skill",DevComment="")
++GameplayTagList=(Tag="Skill.Dash",DevComment="")
 +GameplayTagList=(Tag="Status",DevComment="")
 +GameplayTagList=(Tag="Status.Immune",DevComment="")
 +GameplayTagList=(Tag="Status.Immune.OnConversation",DevComment="")
