--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,10 @@
 *.sln
 
 # File/Path
-Content\Katana_Animations\*.uasset
-Content\ParagonMinions\*.uasset
-Content\BlinkAndDashVFX\*.uasset
+Content\Katana_Animations
+Content\ParagonMinions
+Content\BlinkAndDashVFX
+
 Binary\Win64\*.pdb
 Binary\Win64\*.exe
 Binary\Win64\*.exp
