--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ DerivedDataCache
 /Content/Katana_Animations
 /Content/ParagonMinions
 /Content/TopDown
+Binaries/Win64/UnrealEditor-DevKit.patch_0.exp
+Binaries/Win64/UnrealEditor-DevKit.patch_0.lib
