--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -39,6 +39,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="ComboType.LightAtk.LAtk4",DevComment="")
 +GameplayTagList=(Tag="Damage",DevComment="")
 +GameplayTagList=(Tag="Damage.Physics",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Character",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Character.DamageTaken",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Character.DamageTaken.Slash",DevComment="")
 +GameplayTagList=(Tag="Hit",DevComment="")
 +GameplayTagList=(Tag="Hit.Slash",DevComment="")
 +GameplayTagList=(Tag="Skill",DevComment="")
