--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -27,6 +27,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="ComboType.Combo1",DevComment="")
 +GameplayTagList=(Tag="ComboType.Combo2",DevComment="")
 +GameplayTagList=(Tag="ComboType.Combo3",DevComment="")
++GameplayTagList=(Tag="ComboType.Combo4",DevComment="")
 +GameplayTagList=(Tag="ComboType.HeavyAtk",DevComment="")
 +GameplayTagList=(Tag="ComboType.HeavyAtk.HAtk1",DevComment="")
 +GameplayTagList=(Tag="ComboType.HeavyAtk.HAtk2",DevComment="")
