--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ DerivedDataCache
 /Content/TopDown
 Binaries/Win64/UnrealEditor-DevKit.patch_0.exp
 Binaries/Win64/UnrealEditor-DevKit.patch_0.lib
+/Content/Art
