--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -63,6 +63,12 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.VirtualTextures=True
+bEnableVirtualTextureOpacityMask=True
+r.VirtualTexturedLightmaps=True
+r.Mobile.VirtualTextures=False
+r.Nanite.AllowTessellation=1
+r.Nanite.Tessellation=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
