--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -43,7 +43,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.Character",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.DamageTaken",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.DamageTaken.Slash",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Character.KnockBack",DevComment="")
 +GameplayTagList=(Tag="Hit",DevComment="")
++GameplayTagList=(Tag="Hit.KnockBack",DevComment="")
 +GameplayTagList=(Tag="Hit.Slash",DevComment="")
 +GameplayTagList=(Tag="Skill",DevComment="")
 +GameplayTagList=(Tag="Skill.Dash",DevComment="")
@@ -51,6 +53,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Status.Immune",DevComment="")
 +GameplayTagList=(Tag="Status.Immune.OnConversation",DevComment="")
 +GameplayTagList=(Tag="Status.Vulnerable",DevComment="")
++GameplayTagList=(Tag="Status.Vulnerable.KnockBack",DevComment="")
 +GameplayTagList=(Tag="Status.Vulnerable.TakenDamage",DevComment="")
 +GameplayTagList=(Tag="Status.WeaponHold",DevComment="")
 +GameplayTagList=(Tag="Status.WeaponHold.GreatSword",DevComment="")
