--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ DerivedDataCache
 Binaries/Win64/UnrealEditor-DevKit.patch_0.exp
 Binaries/Win64/UnrealEditor-DevKit.patch_0.lib
 /Content/Art
+*.code-workspace
