--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,10 @@ Binaries/Win64/UnrealEditor-DevKit.patch_0.exp
 Binaries/Win64/UnrealEditor-DevKit.patch_0.lib
 
 *.code-workspace
+/Content/Art/ArtTestMap
+/Content/Art/EnvironmentAsset
+/Content/Art/Map
+/Content/Art/Map
+/Content/Art/Material
+/Content/Art/Prox_Box
+/Content/UltraVolumetrics
