--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ Binaries/Win64/UnrealEditor-DevKit.patch_0.lib
 /Content/Art/Material
 /Content/Art/Prox_Box
 /Content/UltraVolumetrics
+*.sln
+/Content/Art/Map/GameLevel_L1
+/Content/Art/Map/GameLevel_L1
