--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ Binaries/Win64/UnrealEditor-DevKit.patch_0.lib
 /Content/Art/Map/GameLevel_L1
 /Content/Art/Map/GameLevel_L1
 /Content/Art
+/Content/Art
+/Content/Art/Map
