--- a/.gitignore
+++ b/.gitignore
@@ -54,4 +54,4 @@ Binaries/Win64/UnrealEditor-DevKit.patch_0.lib
 /Content/UltraVolumetrics
 *.sln
 /Content/Art/Map/GameLevel_L1
-/Content/Art/**
+**/Content/Art
