--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -69,6 +69,8 @@ r.VirtualTexturedLightmaps=True
 r.Mobile.VirtualTextures=False
 r.Nanite.AllowTessellation=1
 r.Nanite.Tessellation=1
+r.AntiAliasingMethod=2
+r.Mobile.AntiAliasing=0
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
