--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -40,6 +40,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="ComboType.LightAtk.LAtk4",DevComment="")
 +GameplayTagList=(Tag="Damage",DevComment="")
 +GameplayTagList=(Tag="Damage.Physics",DevComment="")
++GameplayTagList=(Tag="Data",DevComment="")
++GameplayTagList=(Tag="Data.Damage",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.DamageTaken",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.DamageTaken.Slash",DevComment="")
