--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -52,6 +52,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Skill",DevComment="")
 +GameplayTagList=(Tag="Skill.Dash",DevComment="")
 +GameplayTagList=(Tag="Status",DevComment="")
++GameplayTagList=(Tag="Status.Dead",DevComment="")
 +GameplayTagList=(Tag="Status.Immune",DevComment="")
 +GameplayTagList=(Tag="Status.Immune.OnConversation",DevComment="")
 +GameplayTagList=(Tag="Status.Vulnerable",DevComment="")
