--- a/DevKit.uproject
+++ b/DevKit.uproject
@@ -66,6 +66,19 @@
 		{
 			"Name": "Empty",
 			"Enabled": false
+		},
+		{
+			"Name": "CommonUI",
+			"Enabled": true
+		},
+		{
+			"Name": "DidItHit",
+			"Enabled": true
+		},
+		{
+			"Name": "TopDownPhysicsCamera",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/0e5ce9b6cd7e4f41b797b4150b0cba55"
 		}
 	]
 }
