--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,6 +9,7 @@ InvalidTagCharacters="\"\',"
 +GameplayTagRedirects=(OldTagName="AnimNotify.ComboWindow",NewTagName="AnimNotify.Combo_1_Window")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="AbilityStatus.CanKnockBack",DevComment="")
 +GameplayTagList=(Tag="AnimNotify",DevComment="")
 +GameplayTagList=(Tag="AnimNotify.Combo_1_Window",DevComment="")
 +GameplayTagList=(Tag="AnimNotify.Combo_1_Window.ComboEnd",DevComment="")
@@ -21,8 +22,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attack.Range",DevComment="")
 +GameplayTagList=(Tag="Attack.Trap",DevComment="")
 +GameplayTagList=(Tag="Buffer",DevComment="")
-+GameplayTagList=(Tag="Buffer.DurationBuffTest",DevComment="")
-+GameplayTagList=(Tag="Buffer.InstBuffTest",DevComment="")
++GameplayTagList=(Tag="Buffer.KnockBack",DevComment="")
 +GameplayTagList=(Tag="ComboType",DevComment="")
 +GameplayTagList=(Tag="ComboType.Combo1",DevComment="")
 +GameplayTagList=(Tag="ComboType.Combo2",DevComment="")
