--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -69,13 +69,9 @@ r.VirtualTexturedLightmaps=True
 r.Mobile.VirtualTextures=False
 r.Nanite.AllowTessellation=1
 r.Nanite.Tessellation=1
-<<<<<<< .mine
 r.AntiAliasingMethod=1
 r.Mobile.AntiAliasing=0
-||||||| .r123
-=======
 r.AntiAliasingMethod=1
->>>>>>> .r130
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -121,6 +117,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_TopDownBP",NewGameName="/Script/DevKit")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_TopDownBP",NewGameName="/Script/DevKit")
 AssetManagerClassName=/Script/DevKit.DevAssetManager
+WorldSettingsClassName=/Script/DevKit.YogWorldSettings
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
