--- a/DevKit.uproject
+++ b/DevKit.uproject
@@ -12,7 +12,8 @@
 				"Engine",
 				"GameplayAbilities",
 				"CoreUObject",
-				"ModularGameplayActors"
+				"ModularGameplayActors",
+				"ModularGameplay"
 			]
 		},
 		{
