--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=DevKit
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Yog/Maps/Level_DefaultEditor.Level_DefaultEditor
-GameDefaultMap=/Game/Yog/Maps/Level_DefaultEditor.Level_DefaultEditor
+GameDefaultMap=/Game/Yog/Maps/lvl_Introduction.lvl_Introduction
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
