--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -61,6 +61,10 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Status.WeaponHold",DevComment="")
 +GameplayTagList=(Tag="Status.WeaponHold.GreatSword",DevComment="")
 +GameplayTagList=(Tag="Status.WeaponHold.Katana",DevComment="")
++GameplayTagList=(Tag="TestOnly",DevComment="")
++GameplayTagList=(Tag="TestOnly.Ability.Melee",DevComment="")
++GameplayTagList=(Tag="TestOnly.Event.Montage.Shared.WeaponHit",DevComment="")
++GameplayTagList=(Tag="TestOnly.Player.Combo.MeleeAttack",DevComment="")
 +GameplayTagList=(Tag="Weapon.GreateSword",DevComment="")
 +GameplayTagList=(Tag="Weapon.Primary",DevComment="")
 
