--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -7,6 +7,7 @@ AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
 +GameplayTagRedirects=(OldTagName="AnimNotify.ComboWindow",NewTagName="AnimNotify.Combo_1_Window")
++GameplayTagRedirects=(OldTagName="TestOnly.Player.Combo.MeleeAtk1",NewTagName="TestOnly.Player.Combo.LightAtk1")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="AbilityStatus.CanKnockBack",DevComment="")
@@ -64,7 +65,12 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="TestOnly",DevComment="")
 +GameplayTagList=(Tag="TestOnly.Ability.Melee",DevComment="")
 +GameplayTagList=(Tag="TestOnly.Event.Montage.Shared.WeaponHit",DevComment="")
-+GameplayTagList=(Tag="TestOnly.Player.Combo.MeleeAttack",DevComment="")
++GameplayTagList=(Tag="TestOnly.Player.Combo.HeavyAtk1",DevComment="")
++GameplayTagList=(Tag="TestOnly.Player.Combo.HeavyAtk2",DevComment="")
++GameplayTagList=(Tag="TestOnly.Player.Combo.HeavyAtk3",DevComment="")
++GameplayTagList=(Tag="TestOnly.Player.Combo.LightAtk1",DevComment="")
++GameplayTagList=(Tag="TestOnly.Player.Combo.LightAtk2",DevComment="")
++GameplayTagList=(Tag="TestOnly.Player.Combo.LightAtk3",DevComment="")
 +GameplayTagList=(Tag="Weapon.GreateSword",DevComment="")
 +GameplayTagList=(Tag="Weapon.Primary",DevComment="")
 
