--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -55,7 +55,7 @@ RuntimeGeneration=Dynamic
 r.ReflectionMethod=1
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
@@ -63,7 +63,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
-r.VirtualTextures=True
+r.VirtualTextures=False
 bEnableVirtualTextureOpacityMask=True
 r.VirtualTexturedLightmaps=True
 r.Mobile.VirtualTextures=False
@@ -72,6 +72,7 @@ r.Nanite.Tessellation=1
 r.AntiAliasingMethod=1
 r.Mobile.AntiAliasing=0
 r.AntiAliasingMethod=1
+r.Nanite.ProjectEnabled=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
