--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -23,7 +23,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attack.Range",DevComment="")
 +GameplayTagList=(Tag="Attack.Trap",DevComment="")
 +GameplayTagList=(Tag="Buffer",DevComment="")
-+GameplayTagList=(Tag="Buffer.KnockBack",DevComment="")
++GameplayTagList=(Tag="Buffer.Active",DevComment="")
++GameplayTagList=(Tag="Buffer.Passive",DevComment="")
 +GameplayTagList=(Tag="ComboType",DevComment="")
 +GameplayTagList=(Tag="ComboType.Combo1",DevComment="")
 +GameplayTagList=(Tag="ComboType.Combo2",DevComment="")
