--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -19,6 +19,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="AnimNotify.ComboStart",DevComment="")
 +GameplayTagList=(Tag="Buffer",DevComment="")
 +GameplayTagList=(Tag="Buffer.Active",DevComment="")
++GameplayTagList=(Tag="Buffer.Active.KnockBack",DevComment="")
 +GameplayTagList=(Tag="Buffer.Passive",DevComment="")
 +GameplayTagList=(Tag="ComboType",DevComment="")
 +GameplayTagList=(Tag="ComboType.Combo1",DevComment="")
@@ -56,6 +57,4 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Status.WeaponHold",DevComment="")
 +GameplayTagList=(Tag="Status.WeaponHold.GreatSword",DevComment="")
 +GameplayTagList=(Tag="Status.WeaponHold.Katana",DevComment="")
-+GameplayTagList=(Tag="Weapon.GreateSword",DevComment="")
-+GameplayTagList=(Tag="Weapon.Primary",DevComment="")
 
