--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -73,6 +73,7 @@ r.AntiAliasingMethod=1
 r.Mobile.AntiAliasing=0
 r.AntiAliasingMethod=1
 r.Nanite.ProjectEnabled=False
+r.Nanite=0
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
