--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -64,8 +64,8 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.VirtualTextures=False
-bEnableVirtualTextureOpacityMask=True
-r.VirtualTexturedLightmaps=True
+bEnableVirtualTextureOpacityMask=False
+r.VirtualTexturedLightmaps=False
 r.Mobile.VirtualTextures=False
 r.Nanite.AllowTessellation=1
 r.Nanite.Tessellation=1
@@ -74,6 +74,7 @@ r.Mobile.AntiAliasing=0
 r.AntiAliasingMethod=1
 r.Nanite.ProjectEnabled=False
 r.Nanite=0
+r.VT.EnableAutoImport=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
