--- a/DevKit.uproject
+++ b/DevKit.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{4D9155D5-4AC7-77B1-8999-E5A1C9ABFFC4}",
+	"EngineAssociation": "5.4",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -88,10 +88,6 @@
 		},
 		{
 			"Name": "AbilitySystemGameFeatureActions",
-			"Enabled": true
-		},
-		{
-			"Name": "FrozenProjectile",
 			"Enabled": true
 		},
 		{
