--- a/.gitignore
+++ b/.gitignore
@@ -277,3 +277,4 @@ Content/RollDodgeDashSet/Maps/Overview.umap
 Content/RollDodgeDashSet/Maps/Overview_BuiltData.uasset
 /Content/EssentialGreatSwordAnimationPack
 /Content/MassiveGreatSwordAnimset
+/Content/BossyEnemy
