--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,14 +3,18 @@ GameName=DevKit
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Yog/Maps/Level_DefaultEditor.Level_DefaultEditor
-GameDefaultMap=/Game/Yog/Maps/lvl_Introduction.lvl_Introduction
-TransitionMap=
+LocalMapOptions=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Game/Yog/Core/B_YogGameInst.B_YogGameInst_C
+GameDefaultMap=None
+ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode_C
 GlobalDefaultServerGameMode=None
-GameInstanceClass=/Game/Yog/Core/B_YogGameInst.B_YogGameInst_C
 
 [/Script/NavigationSystem.RecastNavMesh]
 bDrawPolyEdges=False
