--- a/Config/Tags/PlayerGameplayTag.ini
+++ b/Config/Tags/PlayerGameplayTag.ini
@@ -1,4 +1,6 @@
 [/Script/GameplayTags.GameplayTagsList]
+GameplayTagList=(Tag="Frame",DevComment="")
+GameplayTagList=(Tag="Frame.JumpFrame",DevComment="")
 GameplayTagList=(Tag="PlayerState",DevComment="player character stats  e.g  move, ability cast, idle, dead e.t.c")
 GameplayTagList=(Tag="PlayerState.AbilityCast",DevComment="")
 GameplayTagList=(Tag="PlayerState.Idle",DevComment="")
