--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -13,3 +13,5 @@ bShouldAcquireMissingChunksOnLoad=False
 bShouldWarnAboutInvalidAssets=True
 MetaDataTagsForAssetRegistry=()
 
+[/Script/GameplayAbilities.AbilitySystemGlobals]
+bUseDebugTargetFromHud=true
