--- a/Config/Tags/PlayerGameplayTag.ini
+++ b/Config/Tags/PlayerGameplayTag.ini
@@ -1,6 +1,14 @@
 [/Script/GameplayTags.GameplayTagsList]
 GameplayTagList=(Tag="PlayerState",DevComment="player character stats  e.g  move, ability cast, idle, dead e.t.c")
 GameplayTagList=(Tag="PlayerState.AbilityCast",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo1",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo2",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo3",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo4",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.LightAtk.Combo1",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.LightAtk.Combo2",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.LightAtk.Combo3",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.LightAtk.Combo4",DevComment="")
 GameplayTagList=(Tag="PlayerState.Idle",DevComment="")
 GameplayTagList=(Tag="PlayerState.Move",DevComment="")
 
