--- a/Config/Tags/EnemyTag.ini
+++ b/Config/Tags/EnemyTag.ini
@@ -5,6 +5,7 @@ GameplayTagList=(Tag="Enemy_Behavior.B_Combat.Assist",DevComment="")
 GameplayTagList=(Tag="Enemy_Behavior.B_Combat.Flee",DevComment="")
 GameplayTagList=(Tag="Enemy_Behavior.B_Combat.GetPlayerAction",DevComment="")
 GameplayTagList=(Tag="Enemy_Behavior.B_Combat.HasCombo",DevComment="")
+GameplayTagList=(Tag="Enemy_Behavior.B_Combat.IsAttack",DevComment="")
 GameplayTagList=(Tag="Enemy_Behavior.B_Combat.Minion",DevComment="")
 GameplayTagList=(Tag="Enemy_Behavior.B_Combat.Range",DevComment="")
 GameplayTagList=(Tag="Enemy_Behavior.B_Combat.Retreat",DevComment="Evacuate the area near the enemy after the attack")
