--- a/Config/Tags/PlayerGameplayTag.ini
+++ b/Config/Tags/PlayerGameplayTag.ini
@@ -9,6 +9,7 @@ GameplayTagList=(Tag="PlayerState.AbilityCast.LightAtk.Combo1",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.LightAtk.Combo2",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.LightAtk.Combo3",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.LightAtk.Combo4",DevComment="")
+GameplayTagList=(Tag="PlayerState.Combat.JumpFrame",DevComment="")
 GameplayTagList=(Tag="PlayerState.Idle",DevComment="")
 GameplayTagList=(Tag="PlayerState.Move",DevComment="")
 
