--- a/DevKit.uproject
+++ b/DevKit.uproject
@@ -125,7 +125,8 @@
 		},
 		{
 			"Name": "MissNoHit",
-			"Enabled": true
+			"Enabled": false,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/2986eaeb54174df8b21a5168d28daa4b"
 		}
 	]
 }
