--- a/Config/Tags/PlayerGameplayTag.ini
+++ b/Config/Tags/PlayerGameplayTag.ini
@@ -1,6 +1,7 @@
 [/Script/GameplayTags.GameplayTagsList]
 GameplayTagList=(Tag="PlayerState",DevComment="player character stats  e.g  move, ability cast, idle, dead e.t.c")
 GameplayTagList=(Tag="PlayerState.AbilityCast",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.BlockCombo",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.CanCombo",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo1",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo2",DevComment="")
