--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,6 +79,7 @@ r.AntiAliasingMethod=2
 r.Nanite.ProjectEnabled=False
 r.Nanite=0
 r.VT.EnableAutoImport=False
+r.DefaultFeature.MotionBlur=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
