--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -80,6 +80,9 @@ r.Nanite.ProjectEnabled=False
 r.Nanite=0
 r.VT.EnableAutoImport=False
 r.DefaultFeature.MotionBlur=False
+r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=False
+r.NormalMapsForStaticLighting=True
+r.ForwardShading=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
