--- a/DevKit.uproject
+++ b/DevKit.uproject
@@ -128,6 +128,11 @@
 		{
 			"Name": "AnimationWarping",
 			"Enabled": true
+		},
+		{
+			"Name": "MeleeTrace",
+			"Enabled": false,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/42b0bb860bcd4995b70d40f152a6e9b9"
 		}
 	]
 }
