--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -18,10 +18,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="ComboType.HeavyAtk",DevComment="")
 +GameplayTagList=(Tag="ComboType.LightAtk",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Character.HitEffect",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.KnockBack",DevComment="")
-+GameplayTagList=(Tag="Hit",DevComment="")
-+GameplayTagList=(Tag="Hit.KnockBack",DevComment="")
-+GameplayTagList=(Tag="Hit.Slash",DevComment="")
 +GameplayTagList=(Tag="Skill",DevComment="")
 +GameplayTagList=(Tag="Skill.Dash",DevComment="")
 +GameplayTagList=(Tag="Status",DevComment="")
