--- a/Config/Tags/Buff.ini
+++ b/Config/Tags/Buff.ini
@@ -1,3 +1,4 @@
 [/Script/GameplayTags.GameplayTagsList]
-GameplayTagList=(Tag="Displace.Knockback",DevComment="")
+GameplayTagList=(Tag="Offensive.Damage",DevComment="")
+GameplayTagList=(Tag="Passive.Damage",DevComment="Dot/passive damage")
 
