--- a/Config/Tags/Buff.ini
+++ b/Config/Tags/Buff.ini
@@ -1,4 +1,5 @@
 [/Script/GameplayTags.GameplayTagsList]
+GameplayTagList=(Tag="Aura.Damage",DevComment="")
 GameplayTagList=(Tag="Offensive.Damage",DevComment="")
 GameplayTagList=(Tag="Passive.Damage",DevComment="Dot/passive damage")
 
