--- a/Config/Tags/PlayerGameplayTag.ini
+++ b/Config/Tags/PlayerGameplayTag.ini
@@ -3,6 +3,7 @@ GameplayTagList=(Tag="PlayerState",DevComment="player character stats  e.g  move
 GameplayTagList=(Tag="PlayerState.AbilityCast",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.BlockCombo",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.CanCombo",DevComment="")
+GameplayTagList=(Tag="PlayerState.AbilityCast.Cooldown",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo1",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo2",DevComment="")
 GameplayTagList=(Tag="PlayerState.AbilityCast.HeavyAtk.Combo3",DevComment="")
