--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,11 @@
 [URL]
 GameName=DevKit
 
+[ConsoleVariables]
+gc.AllowIncrementalReachability=1 ; enables Incremental Reachability Analysis
+gc.AllowIncrementalGather=1 ; enables Incremental Gather Unreachable Objects
+gc.IncrementalReachabilityTimeLimit=0.002 ; sets the soft time limit to 2ms
+
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Yog/Maps/Level_DefaultEditor.Level_DefaultEditor
 LocalMapOptions=
