--- a/DevKit.uproject
+++ b/DevKit.uproject
@@ -134,6 +134,10 @@
 			"Name": "MeleeTrace",
 			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/42b0bb860bcd4995b70d40f152a6e9b9"
+		},
+		{
+			"Name": "ActorPalette",
+			"Enabled": true
 		}
 	]
 }
