--- a/Config/Tags/GPAttribute.ini
+++ b/Config/Tags/GPAttribute.ini
@@ -1,5 +1,13 @@
 [/Script/GameplayTags.GameplayTagsList]
 GameplayTagList=(Tag="AttributeCalc",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Action",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Action.ActDamage",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Action.ActDmgReduce",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Action.ActRange",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Action.ActResilience",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Action.ActRotateSpeed",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Action.FreezeFrameTime",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Action.JumpFrameTime",DevComment="")
 GameplayTagList=(Tag="AttributeCalc.Operator",DevComment="")
 GameplayTagList=(Tag="AttributeCalc.Operator.Add",DevComment="")
 GameplayTagList=(Tag="AttributeCalc.Operator.Divide",DevComment="")
