--- a/Config/Tags/GPAttribute.ini
+++ b/Config/Tags/GPAttribute.ini
@@ -13,10 +13,9 @@ GameplayTagList=(Tag="AttributeCalc.Operator.Add",DevComment="")
 GameplayTagList=(Tag="AttributeCalc.Operator.Divide",DevComment="")
 GameplayTagList=(Tag="AttributeCalc.Operator.Minus",DevComment="")
 GameplayTagList=(Tag="AttributeCalc.Operator.Multiply",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.Weapon",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.Weapon.CriticalDamage",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.Weapon.CriticalRate",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.Weapon.WeaponAtk",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.Weapon.WeaponAtkSpeed",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.Weapon.WeaponRange",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.WPN.WeaponAtk",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.WPN.WeaponAtkPower",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.WPN.WeaponAtkRange",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.WPN.WeaponCritDmg",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.WPN.WeaponCritRate",DevComment="")
 
