--- a/Config/Tags/GPAttribute.ini
+++ b/Config/Tags/GPAttribute.ini
@@ -1,21 +1,40 @@
 [/Script/GameplayTags.GameplayTagsList]
 GameplayTagList=(Tag="AttributeCalc",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.Action",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.Action.ActDamage",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.Action.ActDmgReduce",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.Action.ActRange",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.Action.ActResilience",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.Action.ActRotateSpeed",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.Action.FreezeFrameTime",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.Action.JumpFrameTime",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_Attack",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_AttackPower",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_AttackSpeed",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_AttackRange",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_Crit_Damage",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_Crit_Rate",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_DamageTaken",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_Dodge",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_Health",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_MaxHealth",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_MoveSpeed",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_Resilience",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_Resist",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_Sanity",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Addition.Add_Shield",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.Attack",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.AttackPower",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.AttackSpeed",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.AttackRange",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.Crit_Damage",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.Crit_Rate",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.DamageTaken",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.Dodge",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.Health",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.MaxHealth",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.MoveSpeed",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.Resilience",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.Resist",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.Sanity",DevComment="")
+GameplayTagList=(Tag="AttributeCalc.Base.Shield",DevComment="")
 GameplayTagList=(Tag="AttributeCalc.Operator",DevComment="")
 GameplayTagList=(Tag="AttributeCalc.Operator.Add",DevComment="")
 GameplayTagList=(Tag="AttributeCalc.Operator.Divide",DevComment="")
 GameplayTagList=(Tag="AttributeCalc.Operator.Minus",DevComment="")
 GameplayTagList=(Tag="AttributeCalc.Operator.Multiply",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.WPN.WeaponAtk",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.WPN.WeaponAtkPower",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.WPN.WeaponAtkRange",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.WPN.WeaponCritDmg",DevComment="")
-GameplayTagList=(Tag="AttributeCalc.WPN.WeaponCritRate",DevComment="")
 
