--- a/DevKit.uproject
+++ b/DevKit.uproject
@@ -138,6 +138,11 @@
 		{
 			"Name": "CommonLoadingScreen",
 			"Enabled": false
+		},
+		{
+			"Name": "TopDownPhysicsCamera",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/0e5ce9b6cd7e4f41b797b4150b0cba55"
 		}
 	]
 }
