--- a/DevKit.uproject
+++ b/DevKit.uproject
@@ -126,6 +126,10 @@
 			"Name": "TopDownPhysicsCamera",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/0e5ce9b6cd7e4f41b797b4150b0cba55"
+		},
+		{
+			"Name": "MotionWarping",
+			"Enabled": true
 		}
 	]
 }
