--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="ComboType.HeavyAtk",DevComment="")
 +GameplayTagList=(Tag="ComboType.LightAtk",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Character.Bleed",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.HitEffect",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.KnockBack",DevComment="")
 +GameplayTagList=(Tag="Skill",DevComment="")
