--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,7 +16,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Code/B_YogGameInst.B_YogGameInst_C
-GameDefaultMap=/Game/Maps/lvl_Introduction.lvl_Introduction
+GameDefaultMap=/Game/DebugTool/Map/BattleGround.BattleGround
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode_C
 GlobalDefaultServerGameMode=None
