--- a/Config/Tags/EnemyTag.ini
+++ b/Config/Tags/EnemyTag.ini
@@ -1,4 +1,8 @@
 [/Script/GameplayTags.GameplayTagsList]
+GameplayTagList=(Tag="Enemy.Melee.Atk1",DevComment="")
+GameplayTagList=(Tag="Enemy.Melee.Atk2",DevComment="")
+GameplayTagList=(Tag="Enemy.Range.Atk1",DevComment="")
+GameplayTagList=(Tag="Enemy.Range.Atk2",DevComment="")
 GameplayTagList=(Tag="Enemy_Behavior",DevComment="The major categories of the enemy\'s behaviors")
 GameplayTagList=(Tag="Enemy_Behavior.B_Combat",DevComment="")
 GameplayTagList=(Tag="Enemy_Behavior.B_Combat.Assist",DevComment="")
